--- a/minishell_parse/Makefile
+++ b/minishell_parse/Makefile
@@ -6,7 +6,7 @@
 #    By: dpoltura <dpoltura@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/27 11:21:23 by dpoltura          #+#    #+#              #
-#    Updated: 2024/04/09 10:45:11 by dpoltura         ###   ########.fr        #
+#    Updated: 2024/04/09 11:17:27 by dpoltura         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,8 @@ SRCS =	minishell.c \
 		free.c \
 		check_pipe.c \
 		check_chev.c \
-		init.c
+		init.c \
+		echo.c
 
 OBJS = $(SRCS:%.c=%.o)
 
