--- a/donovan/Makefile
+++ b/donovan/Makefile
@@ -5,23 +5,20 @@
 #                                                     +:+ +:+         +:+      #
 #    By: dpoltura <dpoltura@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/03/27 11:21:23 by dpoltura          #+#    #+#              #
-#    Updated: 2024/04/09 12:06:43 by dpoltura         ###   ########.fr        #
+#    Created: 2024/04/09 17:09:10 by dpoltura          #+#    #+#              #
+#    Updated: 2024/04/10 14:50:50 by dpoltura         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CC = cc -Wall -Wextra -Werror -g -lreadline -Wno-unused-command-line-argument
 
-SRCS =	minishell.c \
-		ft_strjoin.c \
-		split_line.c \
-		utils.c \
+SRCS =	minishell_parse.c \
+		init_data.c \
 		free.c \
-		check_pipe.c \
-		check_chev.c \
-		init.c \
-		echo.c \
-		cd.c
+		split_input.c \
+		utils.c \
+		token.c \
+		
 
 OBJS = $(SRCS:%.c=%.o)
 
