--- a/minishell_parse/Makefile
+++ b/minishell_parse/Makefile
@@ -6,7 +6,7 @@
 #    By: dpoltura <dpoltura@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/09 17:09:10 by dpoltura          #+#    #+#              #
-#    Updated: 2024/04/10 14:50:50 by dpoltura         ###   ########.fr        #
+#    Updated: 2024/04/11 10:51:56 by dpoltura         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,6 +18,7 @@ SRCS =	minishell_parse.c \
 		split_input.c \
 		utils.c \
 		token.c \
+		arg_to_cmd.c \
 		
 
 OBJS = $(SRCS:%.c=%.o)
