--- a/minishell_parse/Makefile
+++ b/minishell_parse/Makefile
@@ -6,7 +6,7 @@
 #    By: dpoltura <dpoltura@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/09 17:09:10 by dpoltura          #+#    #+#              #
-#    Updated: 2024/04/11 10:51:56 by dpoltura         ###   ########.fr        #
+#    Updated: 2024/04/11 13:46:34 by dpoltura         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,6 +19,10 @@ SRCS =	minishell_parse.c \
 		utils.c \
 		token.c \
 		arg_to_cmd.c \
+		get_path.c \
+		ft_split.c \
+		ft_strjoin.c \
+		ft_substr.c \
 		
 
 OBJS = $(SRCS:%.c=%.o)
