--- a/minishell_parse/Makefile
+++ b/minishell_parse/Makefile
@@ -6,7 +6,7 @@
 #    By: dpoltura <dpoltura@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/09 17:09:10 by dpoltura          #+#    #+#              #
-#    Updated: 2024/04/11 13:46:34 by dpoltura         ###   ########.fr        #
+#    Updated: 2024/04/15 10:42:56 by dpoltura         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,6 +23,8 @@ SRCS =	minishell_parse.c \
 		ft_split.c \
 		ft_strjoin.c \
 		ft_substr.c \
+		check_input.c\
+		ft_readline.c \
 		
 
 OBJS = $(SRCS:%.c=%.o)
