--- a/minishell_parse/Makefile
+++ b/minishell_parse/Makefile
@@ -6,7 +6,7 @@
 #    By: dpoltura <dpoltura@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/09 17:09:10 by dpoltura          #+#    #+#              #
-#    Updated: 2024/04/15 10:42:56 by dpoltura         ###   ########.fr        #
+#    Updated: 2024/04/15 11:58:50 by dpoltura         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -25,7 +25,7 @@ SRCS =	minishell_parse.c \
 		ft_substr.c \
 		check_input.c\
 		ft_readline.c \
-		
+		init_env.c \
 
 OBJS = $(SRCS:%.c=%.o)
 
